--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,28 +8,37 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
+      # Checkout repository
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
+      # Install .NET 6 SDK
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 5.0.x
+          dotnet-version: '6.0.x'
 
+      # Install dependencies (libssl1.1 for older .NET/Ubuntu)
+      - name: Install libssl1.1 (if needed)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libssl1.1 || true
+
+      # Restore NuGet packages
       - name: Restore dependencies
         run: dotnet restore SpritesInDetail.sln
 
-      - name: Build project
-        run: dotnet build SpritesInDetail.sln -c Release -o build/
+      # Build project
+      - name: Build
+        run: dotnet build SpritesInDetail.sln --configuration Release --no-restore
 
-      - name: List build artifacts
-        run: ls -R build/
+      # Publish DLLs (optional)
+      - name: Publish
+        run: dotnet publish SpritesInDetail.sln -c Release -o ./output --no-restore
 
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: SpritesInDetail-DLL
-          path: build/
+      # List output files
+      - name: List output
+        run: ls -R ./output
